tests/error/type_match/base_case_array_to_slice_const_propagation2.bz
// error: unable to match type '*mut int32' to '*int32'
// note: mismatched mutability of types 'mut int32' and 'int32'
// note: while matching expression of type 'mut [1: *mut int32]' to '[: mut *int32]'
function test()
{
	mut i = 0;
	mut arr: [1: *mut int32] = [ &i ];
	let _: [: mut *int32] = arr;
}
